@@ -22,7 +22,7 @@ import static org.junit.Assert.*;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Scanner;
@@ -225,7 +225,7 @@ public class TempFolderTest
 		{
 			try
 			{
-				HardDisk.deleteDirectoryRecursion(Path.of(folder));
+				HardDisk.deleteDirectoryRecursion(Paths.get(folder));
 			}
 			catch (IOException e)
 			{
